<resources>
    <string name="app_name">MeuApp</string>
    <string name="registro">Registro</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="sair">Sair</string>

        <string name="title_reset_password">Digite uma nova senha</string>
        <string name="label_new_password">Nova senha</string>
        <string name="hint_password">********</string>
        <string name="label_confirm_password">Confirmar senha</string>
        <string name="btn_confirm">Confirmar</string>
    </resources>

